i created meet section

--- a/about.html
+++ b/about.html
@@ -17,6 +17,14 @@
 
 <body>
 
+  <section id="meet">
+    <div class="container">
+      <div class="meet__content">
+        
+      </div>
+    </div>
+  </section>
+
   <script src="js/main.js"></script>
 </body>
 
