--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
   <section id="meet">
     <div class="container">
       <div class="meet__content">
-        
+        <div class="mett__info"></div>
       </div>
     </div>
   </section>
