--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,31 @@
 </head>
 
 <body>
-
+  <section class="contact">
+    <div class="container">
+      <div class="contact__inner row between middle">
+        <div class="contact__desc">
+          <h2 class="contact__heading">Contact</h2>
+          <p class="contact__text">Ask us about</p>
+          <ul class="contact__list">
+            <li class="contact__item">The quality of our talent network</li>
+            <li class="contact__item">Usage & implementation of our software</li>
+            <li class="contact__item">How we help drive innovation</li>
+          </ul>
+        </div>
+        <form class="contact__form">
+          <input type="name" class="contact__input" placeholder="Name" required>
+          <input type="email" class="contact__input" placeholder="Email Address" required>
+          <input type="text" class="contact__input" placeholder="Company Name" required>
+          <input type="text" class="contact__input" placeholder="Title" required>
+          <input type="text" class="contact__input message" placeholder="Message" required>
+          <button type="submit" class="contact__btn btn">submit</button>
+        </form>
+      </div>
+    </div>
+    <img class="contact__bgimg1" src="images/contact-bg-img1.svg" alt="bg-img1">
+    <img class="contact__bgimg2" src="images/contact-bg-img2.svg" alt="bg-img2">
+  </section>
   <script src="js/main.js"></script>
 </body>
 
