--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 </li>
               </ul>
             </nav>
-            <a href="#" class="btn hero__btn">contact us</a>
+            <a href="#" class="btn hero__btn">contact Us</a>
           </div>
         </div>
       </header>
@@ -52,7 +52,7 @@
         <img class="hero__back-img" src="./images/about-img-back.svg" alt="img" width="100" height="200">
       </div>
     </section>
-    <h1>h1</h1>
+
   <script src="js/main.js"></script>
 </body>
 
