--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 </li>
               </ul>
             </nav>
-            <a href="#" class="btn hero__btn">contact Us</a>
+            <a href="#" class="btn hero__btn">contact us</a>
           </div>
         </div>
       </header>
