I finished meet and client section

--- a/about.html
+++ b/about.html
@@ -17,13 +17,82 @@
 
 <body>
 
-  <section id="meet">
+  <section class="meet">
     <div class="container">
       <div class="meet__content">
-        <div class="mett__info"></div>
+        <h2 class="meet__title">Meet the directors</h2>
+        <ul class="meet__list style-none row middle ">
+          <li class="meet__item person">
+            <h3 class="person-name">Nikita Marks</h3>
+            <p class="person-job">Founder & CEO</p>
+            <button class="person-btnimg">
+              <i class='bx bx-plus-medical'  ></i>
+            </button>
+          </li>
+          <li class="meet__item person">
+            <h3 class="person-name">Cristian Duncan</h3>
+            <p class="person-job">Co-founder & COO</p>
+            <button class="person-btnimg">
+              <i class='bx bx-plus-medical'  ></i>
+            </button>
+          </li>
+          <li class="meet__item person">
+            <h3 class="person-name">Cruz Hamer</h3>
+            <p class="person-job">Co-founder & CTO</p>
+            <button class="person-btnimg">
+              <i class='bx bx-plus-medical'  ></i>
+            </button>
+          </li>
+          <li class="meet__item person">
+            <h3 class="person-name">Drake Heaton</h3>
+            <p class="person-job">Business Development Lead</p>
+            <button class="person-btnimg">
+              <i class='bx bx-plus-medical'  ></i>
+            </button>
+          </li>
+          <li class="meet__item person">
+            <h3 class="person-name">Griffin Wise</h3>
+            <p class="person-job">Lead Marketing</p>
+            <button class="person-btnimg">
+              <i class='bx bx-plus-medical'  ></i>
+            </button>
+          </li>
+          <li class="meet__item person meet__item--active">
+            <h3 class="person-nameaden">Aden Allan</h3>
+            <p class="person-text">“Empowered teams create truly amazing products. Set the north star and let them follow it.”</p>
+            <div class="person-socialbox social row middle center">
+              <a class="social-link" href="#"><i class='bx bxl-twitter'   ></i></a>
+              <a class="social-link" href="#"><i class='bx bxl-linkedin-square'  ></i></a>
+            </div>
+            <button class="person-btn">
+              <i class='bx bx-x'></i>
+            </button>
+
+          </li>
+        </ul>
       </div>
     </div>
   </section>
+  <section class="client">
+    <div class="container">
+      <div class="client__content">
+        <h2 class="client__title">Some of our clients</h2>
+        <ul class="client__list style-none row middle between">
+          <li class="client__item">
+          </li>
+          <li class="client__item">
+          </li>
+          <li class="client__item">
+          </li>
+          <li class="client__item">
+          </li>
+          <li class="client__item">
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
 
   <script src="js/main.js"></script>
 </body>
