i finished aside and I created footer

--- a/about.html
+++ b/about.html
@@ -93,7 +93,19 @@
     </div>
   </section>
 
-<aside></aside>
+<aside class="aside">
+  <div class="container">
+    <div class="aside__block row middle between">
+      <div class="aside__info">
+        <h2 class="aside__title">Ready to get started?</h2>
+      </div>
+      <div class="aside__btnbox">
+        <a class="aside__btn btn" href="#">contact us</a>
+      </div>
+    </div>
+  </div>
+</aside>
+<footer class="footer"></footer>
   <script src="js/main.js"></script>
 </body>
 
