build page finish

--- a/index.html
+++ b/index.html
@@ -16,6 +16,77 @@
 </head>
 <body>
 
+  <section class="hero">
+    <header class="hero__header header">
+      <div class="container">
+        <div class="row middle between">
+          <div class="header__logo-box">
+            <a href="#" class="header__logo-link">
+              <img class="header__logo" src="./images/myteam-logo.svg" alt="logo" width="160" height="40">
+            </a>
+          </div>
+          <nav class="header__nav nav grow">
+            <ul class="nav__list row middle">
+              <li class="nav__item">
+                <a href="#" class="nav__link">home</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">about</a>
+              </li>
+            </ul>
+          </nav>
+          <a href="#" class="btn hero__btn">contact us</a>
+        </div>
+      </div>
+    </header>
+    <div class="hero__content2">
+      <div class="container">
+        <div class="hero__desc row middle between">
+          <div class="hero__titlebox-talent titlebox">
+            <h1 class="hero__title-talent">Find the <br> best <span class="hero__span">talent</span></h1>
+          </div>
+          <div class="hero__textbox-talent textbox">
+            <p class="hero__text-talent">Finding the right people and building high performing teams can be hard. Most companies aren't tapping into the abundance of global talent. We're about to change that.</p>
+          </div>
+        </div>
+      </div>
+      <img class="hero__back-img1" src="./images/heroback.svg" alt="img" width="100" height="200">
+      <img class="hero__back-img2" src="./images/hero-back2.svg" alt="img" width="358" height="100">
+    </div>
+  </section>
+  <section class="build">
+    <div class="container">
+      <div class="build__content row middle between">
+        <div class="build__desc">
+          <h2 class="build__title">Build & manage distributed teams like no one else.</h2>
+        </div>
+        <ul class="build__list">
+          <li class="build__item row middle">
+            <img class="build__img" src="./images/build-img1.svg" alt="img" width="72" height="72">
+            <div class="build__inner innerbox">
+              <h3 class="innerbox__title">Experienced Individuals</h3>
+              <p class="innerbox__text">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+            </div>
+          </li>
+          <li class="build__item row middle">
+            <img class="build__img" src="./images/build-img2.svg" alt="img" width="72" height="72">
+            <div class="build__inner innerbox">
+              <h3 class="innerbox__title">Easy to Implement</h3>
+              <p class="innerbox__text">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+            </div>
+          </li>
+          <li class="build__item row middle">
+            <img class="build__img" src="./images/build-img3.svg" alt="img" width="72" height="72">
+            <div class="build__inner innerbox">
+              <h3 class="innerbox__title">Enhanced Productivity</h3>
+              <p class="innerbox__text">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <img class="build__backimg" src="./images/build-back.svg" alt="img" width="100" height="244">
+    </div>
+  </section>
   
 
   <script src="js/main.js"></script>
