--- a/index.html
+++ b/index.html
@@ -87,6 +87,37 @@
       <img class="build__backimg" src="./images/build-back.svg" alt="img" width="100" height="244">
     </div>
   </section>
+  <section class="partners">
+    <div class="container">
+      <div class="partners__content">
+        <div class="partners__titlebox">
+          <h2 class="partners__title">Delivering real results for top companies. Some of our <span class="partners__span">success stories.</span></h2>
+        </div>
+        <ul class="partners__list row middle between">
+          <li class="partners__item">
+            <p class="partners__text"> “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”</p>
+            <h4 class="partners__name">Kady Baker</h4>
+            <p class="partners__job">Product Manager at Bookmark</p>
+            <img src="./images/partner-img1.png" alt="img" width="62" height="62">
+          </li>
+          <li class="partners__item">
+            <p class="partners__text">“We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!”</p>
+            <h4 class="partners__name">Aiysha Reese</h4>
+            <p class="partners__job">Founder of Manage</p>
+            <img src="./images/partner-img2.png" alt="img" width="62" height="62">
+          </li>
+          <li class="partners__item">
+            <p class="partners__text">“Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.”</p>
+            <h4 class="partners__name">Arthur Clarke</h4>
+            <p class="partners__job">Co-founder of MyPhysio</p>
+            <img src="./images/partner-img3.png" alt="img" width="62" height="62">
+          </li>
+        </ul>
+      </div>
+    </div>
+    <img class="partners__backimg1" src="./images/parners-back.svg" alt="bacground-pic" width="147" height="100">
+    <img class="partners__backimg2" src="./images/partners-back2.svg" alt="bacground-pic" width="200" height="100">
+  </section>
 
   <script src="js/main.js"></script>
 </body>
