--- a/about.html
+++ b/about.html
@@ -27,14 +27,14 @@
             <nav class="header__nav nav grow">
               <ul class="nav__list row middle">
                 <li class="nav__item">
-                  <a href="#" class="nav__link">home</a>
+                  <a href="index.html" class="nav__link">home</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">about</a>
+                  <a href="about.html" class="nav__link">about</a>
                 </li>
               </ul>
             </nav>
-            <a href="#" class="btn hero__btn">contact us</a>
+            <a href="contact.html" class="btn hero__btn">contact us</a>
           </div>
         </div>
       </header>
