contact and about pages

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,28 @@
 </head>
 
 <body>
+  <header class="hero__header header">
+    <div class="container">
+      <div class="row middle between">
+        <div class="header__logo-box">
+          <a href="#" class="header__logo-link">
+            <img class="header__logo" src="./images/myteam-logo.svg" alt="logo" width="160" height="40">
+          </a>
+        </div>
+        <nav class="header__nav nav grow">
+          <ul class="nav__list row middle">
+            <li class="nav__item">
+              <a href="index.html" class="nav__link">home</a>
+            </li>
+            <li class="nav__item">
+              <a href="about.html" class="nav__link">about</a>
+            </li>
+          </ul>
+        </nav>
+        <a href="contact.html" class="btn hero__btn">contact us</a>
+      </div>
+    </div>
+  </header>
   <section class="contact">
     <div class="container">
       <div class="contact__inner row between middle">
