--- a/index.html
+++ b/index.html
@@ -16,9 +16,134 @@
 </head>
 
 <body>
-  <section class="delivery">
-    <div></div>
+  <section class="bigbox back">
+    <div class="container">
+      <div class="delivery  center">
+        <div class="delivery__desc-box">
+          <h2 class="delivery__title">
+            Delivering real results for top companies. Some of our 
+            <span class="delivery__span">
+              success stories.
+            </span>
+          </h2>
+        </div>
+        <div class="delivery__box">
+          <ul class="delivery__list row middle between">
+            <li class="delivery__items">
+              <p class="delivery__text">
+                “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”
+              </p>
+              <h3 class="delivery__name">
+                Kady Baker
+              </h3>
+              <p class="delivery__job">
+                Product Manager at Bookmark
+              </p>
+              <img src="images/delivery-1.png" alt="delivery-1" width="62" height="62">
+            </li>
+
+            <li class="delivery__items">
+              <p class="delivery__text">
+                “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”
+              </p>
+              <h3 class="delivery__name">
+                Kady Baker
+              </h3>
+              <p class="delivery__job">
+                Product Manager at Bookmark
+              </p>
+              <img src="images/delivery-2.png" alt="delivery-2" width="62" height="62">
+            </li>
+
+            <li class="delivery__items">
+              <p class="delivery__text">
+                “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”
+              </p>
+              <h3 class="delivery__name">
+                Kady Baker
+              </h3>
+              <p class="delivery__job">
+                Product Manager at Bookmark
+              </p>
+              <img src="images/delivery-3.png" alt="delivery-3" width="62" height="62">
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </section>
+
+  <aside class="aside">
+    <div class="container">
+      <div class="aside__box row middle between">
+        <div class="aside__descbox">
+          <h2 class="aside__title">Ready to get started?</h2>
+        </div>
+        <div class="aside__btnbox">
+          <a class="aside__btn btn" href="#contact.html">
+            contact us
+          </a>
+        </div>
+      </div>
+    </div>
+  </aside>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__block row middle ">
+        <div class="footer__contentbox">
+          <a class="footer__logolink" href="#">
+            <img src="images/footer-logo.svg" alt="img" width="160" height="40">
+          </a>
+          <ul class="footer__list ul row middle ">
+            <li class="footer__item">
+              <a class="footer__link"  href="#">
+                home
+              </a>
+            </li>
+
+            <li class="footer__item">
+              <a class="footer__link" href="#">
+                about
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__contentbox">
+          <p class="footer__text">
+            987  HillcrestLane <br>
+            Irvine, CA <br>
+            California 92714 <br>
+            Call Us : 949-833-7432
+          </p>
+        </div>
+        <div class="footer__contentbox">
+          <ul class="footer__sociallist ul row middle">
+            <li class="footer__socialitem">
+              <a href="#">
+                <i class='bx bxl-facebook-square'></i>
+              </a>
+            </li>
+
+            <li class="footer__socialitem">
+              <a href="#">
+                <i class='bx bxl-pinterest-alt'></i>
+              </a>
+            </li>
+
+            <li class="footer__socialitem">
+              <a href="#">
+                <i class='bx bxl-twitter'></i>
+              </a>
+            </li>
+          </ul>
+          <p class="footer__text">
+            Copyright 2020. All Rights Reserved
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="js/main.js"></script>
 </body>
