--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,51 @@
     <img class="contact__bgimg1" src="images/contact-bg-img1.svg" alt="bg-img1">
     <img class="contact__bgimg2" src="images/contact-bg-img2.svg" alt="bg-img2">
   </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__block row middle ">
+        <div class="footer__contentbox">
+            <a class="footer__logolink" href="#">
+              <img src="images/myteam.svg" alt="img" width="160" height="40">
+            </a>
+            <ul class="footer__list style-none row middle ">
+              <li class="footer__item">
+                <a  class="footer__link"  href="#">
+                  home
+                </a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#">
+                  about
+                </a>
+              </li>
+            </ul>
+      </div>
+      <div class="footer__contentbox">
+        <p class="footer__text">987  HillcrestLane <br>
+          Irvine, CA <br>
+          California 92714 <br>
+          Call Us : 949-833-7432</p>
+      </div>
+      <div class="footer__contentbox">
+          <ul class="footer__sociallist style-none row middle">
+            <li class="footer__socialitem">
+              <a href="#"><i class='bx bxl-facebook-square'></i></a>
+            </li>
+            <li class="footer__socialitem">
+              <a href="#"><i class='bx bxl-pinterest-alt'></i></a>
+            </li>
+            <li class="footer__socialitem">
+              <a href="#"><i class='bx bxl-twitter' ></i></a>
+            </li>
+          </ul>
+          <p class="footer__text">Copyright 2020. All Rights Reserved</p>
+      </div>
+      </div>
+    </div>
+  </footer>
+  
+   
   <script src="js/main.js"></script>
 </body>
 
